PYIC-7263: Allow batches to be passed in to bulk migration script
Allows the definition of a batch to run to be passed in. Also refactors
the logging to be more informative and correct.